# ImageIndexing

./: .classification.order  .gitignore  .hist.done  CMakeLists.txt  README.md  imgAddNoise.cpp  imgScale.cpp  scriptClassification.sh  scriptDistance.sh
docs/: Makefile  biblio.bib  boiboites.sty  macros.tex  report.tex
docs/images/: apple-1-granulo.eps  apple-1.eps  beetle.eps  bone.eps  carriage.eps  cellular_phone.eps  device3.eps  device6-exp2.eps  device6.eps  device8.eps  device9-6-granulo.eps  device9-6-object.eps  device9.eps  elephant.eps  fork.eps  granulo-noised.eps  horseshoe-12.eps  horseshoe-2.eps  horseshoe-4.eps  horseshoe-6.eps  key.eps  octopus-without-noise.eps  octopus.eps  plot_1.eps  pocket.eps  sea_snake.eps  stef.eps  test-apple.eps  test-bone.eps  test-device9.eps  test-octopus.eps
histograms/database/: Bone-1.hist  Bone-10.hist  Bone-11.hist  Bone-12.hist  Bone-13.hist  Bone-14.hist  Bone-2.hist  Bone-20.hist  Bone-3.hist  Bone-4.hist  Bone-5.hist  Bone-6.hist  Bone-7.hist  Bone-8.hist  Bone-9.hist  Comma-1.hist  Comma-10.hist  Comma-11.hist  Comma-12.hist  Comma-13.hist  Comma-14.hist  Comma-2.hist  Comma-20.hist  Comma-3.hist  Comma-4.hist  Comma-5.hist  Comma-6.hist  Comma-7.hist  Comma-8.hist  Comma-9.hist  Glas-1.hist  Glas-10.hist  Glas-11.hist  Glas-12.hist  Glas-13.hist  Glas-14.hist  Glas-2.hist  Glas-20.hist  Glas-3.hist  Glas-4.hist  (+941 more)
include/: distance.h  granulometry.h  toolbox.h  transforms.h
plot/: plot.p
src/: addNoise.cpp  deleteNoise.cpp  distance.cpp  fastDistance.cpp  fastRetrieval.cpp  genHistogram.cpp  granulometry.cpp  graph.cpp  helloworld.cpp  indexing.cpp  retrieval.cpp  testEfficiency.cpp  toolbox.cpp  transforms.cpp
tests/: plotHisto.p
